# myparser

./: .gitignore  LICENSE.txt  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
data/: test.txt  test1.txt  test16.txt  test32.txt  test8.txt  test_1.txt  testitio.txt
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  myparser.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  myparser.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt  myparser.rst.txt
examples/: count.py  encode.py  performance.py
src/: __init__.py  app.py
src/myparser/: __init__.py  argparser.py  encoding.py  performance.py  stringparser.py
tests/: test_count.py
tests/tests_myparser/: __init__.py  test_app.py  test_argparser.py  test_stringparser.py
