[metadata]
name = myparser
version = 0.0.1
license = MIT
description = "Simple string parser and decoder library"
long_description = file: README.rst
author = Matias Selser
author_email = mati.selser@hotmail.com
classifiers=

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   tox
   black
   isort
   matplotlib

[options.packages.find]
where=src
